# hw04

./: CMakeLists.txt  config.c  config.h  functions.h  log.c  log.h  main.c  module-cache.c  module-cache.h  module-decorate.c  module-decorate.h  module-magic.c  module-magic.h  module-tolower.c  module-tolower.h  module-toupper.c  module-toupper.h  module.h  query.c  query.h
